# 0byte-backend

./: Cargo.toml  Dockerfile  README.md  example.env
src/: config.rs  main.rs
src/api/: proof.rs
src/circuits/src/: main.nr
src/handlers/: mod.rs  p_hash.rs  proof.rs
src/models/: metadata.rs  mod.rs  proof.rs
src/routes/: generate.rs  home.rs  mod.rs  verify.rs
src/services/: embedd.rs  mod.rs  phash.rs  witness.rs  zkp.rs
src/solana/: anchor.rs
src/utils/: circuits.rs  image.rs  mod.rs
src/zkp/: Nargo.toml  Prover.toml
src/zkp/src/: main.nr
