[package]
name = "zero_byte"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
img_hash = "3.2"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
axum = "0.8.4"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }


noir_rs = { git = "https://github.com/visoftsolutions/noir_rs.git", branch = "latest", package = "noir_rs" }
base64 = "0.22.1"
nargo = { git = "https://github.com/noir-lang/noir", package = "nargo" }
noirc_abi = { git = "https://github.com/noir-lang/noir" }
acir = "0.46.0"
rustdct = "0.7.1"
log = "0.4.27"

