[package]
name = "zerobyte"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0"
base64 = "0.22.1"
chrono = "0.4"
image = "0.24"
imagehash = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
hex = "0.4"
num-bigint = "0.4.6"
actix-multipart = "0.7.2"
futures-util = "0.3.31"
dotenv = "0.15.0"
env_logger = "0.11.8"
png = "0.17.16"
uuid = { version = "1.16.0", features = ["v4"] }
once_cell = "1.21.3"
envy = "0.4.2"
solana-client = "2.2.7"
solana-sdk = "2.2.2"
log = "0.4.27"
spl-memo = "6.0.0"
shellexpand = "3.1.1"

